--- a/layout_files/AirPollution.kv
+++ b/layout_files/AirPollution.kv
@@ -8,314 +8,177 @@
 #:set air_Q5 'I would be better wearing a pollution mask'
 #:set air_Q6 'I prefer wearing a pollution mask'
 
+#:set air_toolbar_title "Air Pollution"
+
 # ----
 <AirPollutionLandingPage>:
-
 	BoxLayout:
 		orientation: 'vertical'
 
-		MDTopAppBar:
-			title: 'Air Pollution'
-			halign: 'left'
-			left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-			right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-			# right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-			elevation:8
+		MyActionBar:
+			title:air_toolbar_title
 
-		Widget
-			size_hint_y:0.3
-		MDLabel:
-			text: 'The Air Quality Index (AQI) is a measure of air pollution created by the United States Environmental Protection Agency. \n\nThe measure ranges from 0 to 500, with indices greater than 200 indicating risk to health.'
-			font_size:'14sp'
-			halign: 'left'
-			size_hint_x:0.8
-			pos_hint:{'center_x':0.5}
+		BoxLayout:
+			orientation: 'vertical'
+			WrapLabel:
+				id:label1
+				text: 'The Air Quality Index (AQI) is a measure of air pollution created by the United States Environmental Protection Agency. The measure ranges from 0 to 500, with indices greater than 200 indicating risk to health.'
+				padding: dp(0), dp(30)
 
-		MDLabel:
-			# font_size:'2xw0sp'
-			text: 'Answer the following questions about pollution mask usage'
-			# text_color:DARK_BLUE
-			theme_text_color:"Hint"
-			halign: 'left'
-			size_hint_x:0.8
-			# size_hint_x:0.5
-			pos_hint:{'center_x':0.5}
+			Label:
+				size_hint_x:0.8
+				id:label2
+				text_size: root.width*self.size_hint_x, None
+			    size: self.texture_size
+			    color: TXT_COLOR
+				text: 'Answer the following questions about pollution mask usage'
+				halign: 'center'
+				size_hint_x:0.8
+				# size_hint_x:0.5
+				pos_hint:{'center_x':0.5}
 
-		Button:
+		MyButton2:
 			text:"Begin"
-			font_style:'Button'
-			size_hint:0.7,0.25
-			pos_hint:{'center_x':0.5}
-			on_release:
-				root.parent.ids['AirPollutionPage'].ids['android_tabs'].switch_tab('1')
-				root.arrow_right()
+			# background_color: BTN_COLOR
+			# font_style:'Button'
+			# size_hint:0.7,0.25
+			# pos_hint:{'center_x':0.5}
+			on_release:	root.arrow_right()
 
+		NavButtons:
 
-		BoxLayout:
-			orientation: 'horizontal'
-			size_hint_y:0.3
-			Button:
-				size_hint_y:0.5
-				text:'                     <                       '
-				on_release:root.arrow_left()
-			Button:
-				size_hint_y:0.5
-				text:'                     >                       '
-				on_release:
-					root.parent.ids['AirPollutionPage'].ids['android_tabs'].switch_tab('1')
-					root.arrow_right()
-
+# ----
 <AirPollutionPage>:
-
 	BoxLayout:
 		orientation: 'vertical'
-		MDTopAppBar:
-			title: 'Air Pollution'
-			halign: 'left'
-			left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-			right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-			# right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-			elevation:8
 
+		MyActionBar:
+			title:air_toolbar_title
 		BoxLayout:
-			size_hint_y:0.7
+			size_hint_y:0.6
+			orientation:'vertical'
+			pos_hint:{'center_x':0.5}
 
-			MDTabs:
-				id: android_tabs
-				tab_pos:'left_top'
-				on_tab_switch: root.on_tab_switch(*args)
+			Label:
+				size_hint_x:0.8
+				# size_hint_y:0.6
+				canvas.before:
+				    Color:
+				        rgba: 1, .3, .4, .85
+				    Rectangle:
+				        size: self.size
+				        pos: self.pos
+				id:label1
+				text_size: root.width*self.size_hint_x, None
+			    size: self.texture_size
+			    color: TXT_COLOR
+				text:air_Q_main
+				halign:'center'
+				pos_hint:{'center_x':0.5}
 
-				Tab:
-					text:'1'
-					icon:'blank'
-					BoxLayout:
-						orientation:'vertical'
-
-						MDLabel:
-							text: air_Q0
-							halign: 'center'
-							size_hint_x:0.9
-
-				Tab:
-					text:'2'
-					icon:'blank'
-					BoxLayout:
-						orientation:'vertical'
-						MDLabel:
-							text: air_Q1
-							halign: 'center'
-							size_hint_x:0.9
-				Tab:
-					text:'3'
-					icon:'blank'
-					BoxLayout:
-						orientation:'vertical'
-						MDLabel:
-							text: air_Q2
-							halign: 'center'
-							size_hint_x:0.9
-				Tab:
-					text:'4'
-					icon:'blank'
-					BoxLayout:
-						orientation:'vertical'
-						MDLabel:
-							text: air_Q3
-							halign: 'center'
-							size_hint_x:0.9
-				Tab:
-					text:'5'
-					icon:'blank'
-					BoxLayout:
-						orientation:'vertical'
-						MDLabel:
-							text: air_Q4
-							halign: 'center'
-							size_hint_x:0.9
-				Tab:
-					text:'6'
-					icon:'blank'
-					BoxLayout:
-						orientation:'vertical'
-						MDLabel:
-							text: air_Q5
-							halign: 'center'
-							size_hint_x:0.9
-				Tab:
-					text:'7'
-					icon:'blank'
-					BoxLayout:
-						orientation:'vertical'
-						MDLabel:
-							text: air_Q6
-							halign: 'center'
-							size_hint_x:0.9
+			# BoxLayout:
+			Label:
+				size_hint_x:0.8
+				# size_hint_y:0.6
+				id:air_pollution_q_label
+				# name:"air_pollution_q_label"
+				canvas.before:
+				    Color:
+				        rgba: 0, .4, .3, .85
+				    Rectangle:
+				        size: self.size
+				        pos: self.pos
+				text_size: root.width*self.size_hint_x, None
+				color: TXT_COLOR
+			    size: self.texture_size
+				text: air_Q0
+				halign:'center'
+				pos_hint:{'center_x':0.5,'center_y':0.3}
+				# pos_hint:{}
 
 		BoxLayout:
 			orientation:'vertical'
-			Button:
-				# id:button7
-				icon:'numeric-7'
+			MyButton2:
 				text:'Strongly agree'
-				halign:'left'
-				size_hint_x:0.8
-				font_style:'Button'
-				theme_text_color: "Custom"
-				color_icon_root_button: app.theme_cls.accent_color
-				pos_hint:{'center_x':0.5}
-
 				on_release:
 					root.button_press(7)
 			Widget:
 				size_hint_y:0.05
-			Button:
-				id:button6
-				icon:'numeric-6'
+
+			MyButton2:
 				text:'Agree'
-				halign:'left'
-				size_hint_x:0.8
-				font_style:'Button'
-				# size_hint_y:0.8
-				pos_hint:{'center_x':0.5}
-				on_release: root.button_press(6)
-				custom_color: 0, 1, 0, 1
+				on_release:
+					root.button_press(6)
 			Widget:
 				size_hint_y:0.05
-			Button:
-				id:button5
-				icon:'numeric-5'
+			MyButton2:
 				text:'Somewhat agree'
-				halign:'left'
-				size_hint_x:0.8
-				font_style:'Button'
-				# size_hint_y:0.8
-				pos_hint:{'center_x':0.5}
 				on_release: root.button_press(5)
 			Widget:
 				size_hint_y:0.05
-			Button:
-				id:button4
-				icon:'numeric-4'
+
+			MyButton2:
 				text:'Neutral'
-				halign:'left'
-				size_hint_x:0.8
-				font_style:'Button'
-				pos_hint:{'center_x':0.5}
 				on_release: root.button_press(4)
 			Widget:
 				size_hint_y:0.05
-			Button:
-				id:button3
-				icon:'numeric-3'
+
+			MyButton2:
 				text:'Somewhat disagree'
-				halign:'left'
-				size_hint_x:0.8
-				font_style:'Button'
-				pos_hint:{'center_x':0.5}
 				on_release: root.button_press(3)
 			Widget:
 				size_hint_y:0.05
-			Button:
-				id:button2
-				icon:'numeric-2'
+
+			MyButton2:
 				text:'Disagree'
-				halign:'left'
-				size_hint_x:0.8
-				font_style:'Button'
-				pos_hint:{'center_x':0.5}
 				on_release: root.button_press(2)
 			Widget:
 				size_hint_y:0.05
-			Button:
-				id:button1
-				icon:'numeric-1'
+
+			MyButton2:
 				text:'Strongly Disagree'
-				halign:'left'
-				size_hint_x:0.8
-				font_style:'Button'
-				pos_hint:{'center_x':0.5}
 				on_release: root.button_press(1)
 
-		BoxLayout:
-			orientation: 'horizontal'
-			size_hint_y:0.3
-			Button:
-				size_hint_y:0.5
-				text:'                     <                       '
-				on_release:root.arrow_left()
+		NavButtons:
 
-			Button:
-				size_hint_y:0.5
-				text:'                     >                       '
-				on_release:root.arrow_right()
-
-	FloatLayout:
-		orientation: 'vertical'
-		MDLabel:
-			pos:(50,950)
-			text: air_Q_main
-			# md_bg_color:0,0,1,0.05
-			size_hint_y:0.15
-			size_hint_x:0.9
-			text_color:1,1,1,1
-
+# -------------
 <AirPollutionScorePage>:
 	score_label:score_label
 	BoxLayout:
 		orientation: 'vertical'
-		MDTopAppBar:
 
-			title: 'Air Pollution'
-			left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-			right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-			# right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-			elevation:8
-
-		MDLabel:
-			text: 'Your score is:'
-			halign: 'center'
-
-		MDLabel:
-			id:score_label
-			text: ''
-			halign: 'center'
-
-		Button:
-			id:restart_button
-			text:'Try Again'
-			font_style:'Button'
-			size_hint_x:0.7
-			pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-			on_release:root.reset_quiz()
-		Widget:
-			size_hint_y:0.05
-		Button:
-			id:next_section
-			text:'Back'
-			font_style:'Button'
-			size_hint_x:0.7
-			pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-			on_release:root.chevron_left()
-		Widget:
-			size_hint_y:0.05
-		Button:
-			id:next_section
-			text:'Next'
-			font_style:'Button'
-			size_hint_x:0.7
-			pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-			on_release:root.arrow_right()
-
-		Widget:
-			size_hint_y:0.7
+		MyActionBar:
+			title:air_toolbar_title
 
 		BoxLayout:
-			orientation: 'horizontal'
-			Button:
-				size_hint_x:1
-				text:'                     <                       '
-				on_release:root.arrow_left()
-			Button:
-				size_hint_x:1
-				text:'                     >                       '
+			orientation:'vertical'
+			Label:
+				text: 'Your score is:'
+				color: TXT_COLOR
+				halign: 'center'
+				font_size:'16sp'
+
+			Label:
+				id:score_label
+				text: ''
+				color: TXT_COLOR
+				halign: 'center'
+				font_size:'34sp'
+
+			MyButton2:
+				text:'Try Again'
+			Widget:
+				size_hint_y:0.05
+			MyButton2:
+				text:'Back'
+				on_release:root.chevron_left()
+			Widget:
+				size_hint_y:0.05
+			MyButton2:
+				text:'Next'
 				on_release:root.arrow_right()
+
+			Widget:
+				size_hint_y:0.2
+
+		NavButtons:
