--- a/layout_files/Alcohol.kv
+++ b/layout_files/Alcohol.kv
@@ -11,108 +11,60 @@
 	BoxLayout:
 		orientation: 'vertical'
 
-		MDTopAppBar:
-			title: alcohol_toolbar_title
-			halign: 'left'
-			left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-			right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-			# right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-			elevation:8
+		MyActionBar:
+            title:alcohol_toolbar_title
 
-		MDLabel:
+		Label:
 			text:''
 			size_hint_y:0.3
-		MDLabel:
+		WrapLabel:
 			text: alcohol_landing_blurb
-			font_size:'14sp'
-			halign: 'left'
-			size_hint_x:0.8
-			pos_hint:{'center_x':0.5}
+			padding: dp(0), dp(30)
+			halign:'center'
 
-		MDLabel:
+		Label:
 			# font_size:'2xw0sp'
 			text: alcohol_landing_subtitle
+			color: TXT_COLOR
 			# text_color:DARK_BLUE
 			theme_text_color:"Hint"
 			halign: 'left'
 			size_hint_x:0.8
+			color: TXT_COLOR
 			# size_hint_x:0.5
 			pos_hint:{'center_x':0.5}
 
-		Button:
+		MyButton2:
 			text:"Begin"
-			font_style:'Button'
-			# size_hint_x:0.7
-			pos_hint:{'center_x':0.5}
-			on_release:
-				root.parent.ids['AlcoholUsagePage'].ids['android_tabs'].switch_tab('1')
-				root.arrow_right()
+			on_release: root.arrow_right()
 
 
-		BoxLayout:
-			orientation: 'horizontal'
-			size_hint_y:0.3
-			Button:
-				# size_hint_x:1
-				text:'                     <                       '
-				on_release:root.arrow_left()
-			Button:
-				size_hint_x:1
-				text:'                     >                       '
-				on_release:
-					root.parent.ids['AlcoholUsagePage'].ids['android_tabs'].switch_tab('1')
-					root.arrow_right()
+		NavButtons
 
 <AlcoholUsagePage>:
 	BoxLayout:
 		orientation: 'vertical'
-		MDTopAppBar:
-			title: alcohol_toolbar_title
-			left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-			right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
-			elevation:8
-		# MDLabel:
-		# 	text:''
+		MyActionBar:
+            title:alcohol_toolbar_title
 
-		MDBoxLayout:
-			size_hint_y:0.7
+		BoxLayout:
 
-			MDTabs:
-				id: android_tabs
-				tab_pos:'left_top'
-				on_tab_switch: root.on_tab_switch(*args)
+		    orientation:'vertical'
+		    size_hint_y:0.6
+		    pos_hint:{'center_x':0.5}
 
-				Tab:
-					icon:'blank'
-					text:'1'
-					MDBoxLayout:
-						orientation:'vertical'
+		    Label:
+		        size_hint_x:0.8
+		        # size_hint_y:0.6
+		        id:q_label
+		        text_size: root.width*self.size_hint_x, None
+		        color: TXT_COLOR
+		        size: self.texture_size
+		        text:""
+		        halign:'center'
+		        pos_hint:{'center_x':0.5,'center_y':0.3}
 
-						MDLabel:
-							text: alcohol_Q1
-							halign: 'center'
-							size_hint_x:0.9
-
-				Tab:
-					icon:'blank'
-					text:'2'
-					MDBoxLayout:
-						orientation:'vertical'
-						MDLabel:
-							text: alcohol_Q2
-							halign: 'center'
-							size_hint_x:0.9
-				Tab:
-					icon:'blank'
-					text:'3'
-					MDBoxLayout:
-						orientation:'vertical'
-						MDLabel:
-							text: alcohol_Q3
-							halign: 'center'
-							size_hint_x:0.9
-
-		MDBoxLayout:
+		BoxLayout:
 		    orientation:'vertical'
 		    Button:
 		        # id:button7
@@ -122,12 +74,11 @@
 		        size_hint_x:0.8
 		        font_style:'Button'
 		        theme_text_color: "Custom"
-		        color_icon_root_button: app.theme_cls.accent_color
 		        pos_hint:{'center_x':0.5}
 
 		        on_release:
 		            root.button_press(7)
-		    MDLabel:
+		    Label:
 		        text:''
 		        size_hint_y:0.05
 		    Button:
@@ -141,7 +92,7 @@
 		        pos_hint:{'center_x':0.5}
 		        on_release: root.button_press(6)
 		        custom_color: 0, 1, 0, 1
-		    MDLabel:
+		    Label:
 		        text:''
 		        size_hint_y:0.05
 		    Button:
@@ -154,7 +105,7 @@
 		        # size_hint_y:0.8
 		        pos_hint:{'center_x':0.5}
 		        on_release: root.button_press(5)
-		    MDLabel:
+		    Label:
 		        text:''
 		        size_hint_y:0.05
 		    Button:
@@ -166,7 +117,7 @@
 		        font_style:'Button'
 		        pos_hint:{'center_x':0.5}
 		        on_release: root.button_press(4)
-		    MDLabel:
+		    Label:
 		        text:''
 		        size_hint_y:0.05
 		    Button:
@@ -178,7 +129,7 @@
 		        font_style:'Button'
 		        pos_hint:{'center_x':0.5}
 		        on_release: root.button_press(3)
-		    MDLabel:
+		    Label:
 		        text:''
 		        size_hint_y:0.05
 		    Button:
@@ -190,7 +141,7 @@
 		        font_style:'Button'
 		        pos_hint:{'center_x':0.5}
 		        on_release: root.button_press(2)
-		    MDLabel:
+		    Label:
 		        text:''
 		        size_hint_y:0.05
 		    Button:
@@ -203,21 +154,11 @@
 		        pos_hint:{'center_x':0.5}
 		        on_release: root.button_press(1)
 
-		BoxLayout:
-			size_hint_y:0.2
-			orientation: 'horizontal'
-			Button:
-				size_hint_x:1
-				text:'                     <                       '
-				on_release:root.arrow_left()
-			Button:
-				size_hint_x:1
-				text:'                     >                       '
-				on_release:root.arrow_right()
+		NavButtons
 
 	FloatLayout:
 	    orientation: 'vertical'
-	    MDLabel:
+	    Label:
 	        pos:(50,950)
 	        text: ''
 	        # md_bg_color:0,0,1,0.05
@@ -226,81 +167,48 @@
 	        text_color:1,1,1,1
 
 <AlcoholScorePage>:
-<<<<<<< Updated upstream
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        MDTopAppBar:
+        MyActionBar:
+            title:alcohol_toolbar_title
 
-            title: alcohol_toolbar_title
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-            elevation:8
-
-        MDLabel:
+        Label:
             text: 'Your score is:'
+            color: TXT_COLOR
             halign: 'center'
 
-        MDLabel:
+        Label:
             id:score_label
+            color: TXT_COLOR
             text: ''
             halign: 'center'
-=======
-	score_label:score_label
-	BoxLayout:
-		orientation: 'vertical'
 
-		MyActionBar:
-			title:air_toolbar_title
-
-		BoxLayout:
-			orientation:'vertical'
-			Label:
-				text: 'Your score is:'
-				color: TXT_COLOR
-				halign: 'center'
-				font_size:'16sp'
->>>>>>> Stashed changes
-
-			Label:
-				id:score_label
-				text: ''
-				color: TXT_COLOR
-				halign: 'center'
-				font_size:'34sp'
-
-			MyButton2:
-				text:'Try Again'
-			Widget:
-				size_hint_y:0.05
-			MyButton2:
-				text:'Back'
-				on_release:root.chevron_left()
-			Widget:
-				size_hint_y:0.05
-			MyButton2:
-				text:'Next'
-				on_release:root.arrow_right()
-
-<<<<<<< Updated upstream
-        MDLabel:
-            size_hint_y:0.7
+        Button:
+            id:restart_button
+            text:'Try Again'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.reset_quiz()
+        Widget:
+            size_hint_y:0.05
+        Button:
+            id:next_section
+            text:'Back'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.chevron_left()
+        Widget:
+            size_hint_y:0.05
+        Button:
+            id:next_section
+            text:'Next'
+            font_style:'Button'
+            size_hint_x:0.7
+            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            on_release:root.arrow_right()
 
 
-        BoxLayout:
-            orientation: 'horizontal'
-            Button:
-                text:'                     <                       '
-                size_hint_x:1
-                on_release:root.arrow_left()
-            Button:
-                text:'                     >                       '
-                size_hint_x:1
-                on_release:root.arrow_right()
-=======
-			Widget:
-				size_hint_y:0.2
-
-		NavButtons:
->>>>>>> Stashed changes
+        NavButtons
