--- a/layout_files/DepressionPage.kv
+++ b/layout_files/DepressionPage.kv
@@ -1,244 +1,144 @@
-#:set depression_Q0 'Over the last 2 weeks, how often have you been bothered by the following problems:'
-#:set depression_Q1 'Little interest or pleasure in doing things'
-#:set depression_Q2 'Feeling down, depressed, or hopeless'
+#:set depression_Q_main 'Over the last 2 weeks, how often have you been bothered by the following problems:'
+#:set depression_Q0 'Little interest or pleasure in doing things'
+#:set depression_Q1 'Feeling down, depressed, or hopeless'
 #:set depression_toolbar_title 'Depression'
 
 <DepressionLandingPage>:
     BoxLayout:
         orientation: 'vertical'
 
-        MDTopAppBar:
-            title: depression_toolbar_title
-            halign: 'left'
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-            elevation:8
+        MyActionBar:
+            title:depression_toolbar_title
 
-        MDLabel:
-            text:''
-            size_hint_y:0.3
-        MDLabel:
+
+        WrapLabel:
+            id:label1
             text: 'Depression, defined as having little interest in doing things and feeling down/hopeless more often than not in a 2-week period, is linked to increased risk of Alzheimer\'s disease.'
-            font_size:'14sp'
-            halign: 'left'
-            size_hint_x:0.8
-            pos_hint:{'center_x':0.5}
+            padding: dp(0), dp(30)
 
-        MDLabel:
+        Label:
+            size_hint_x:0.8
             # font_size:'2xw0sp'
             text: 'Answer the following questions about depression'
             # text_color:DARK_BLUE
             theme_text_color:"Hint"
             halign: 'left'
             size_hint_x:0.8
+            color: TXT_COLOR
             # size_hint_x:0.5
             pos_hint:{'center_x':0.5}
+            size_hint_y:0.5
 
-        Button:
+        MyButton2:
             text:"Begin"
-            font_style:'Button'
-            # size_hint_x:0.7
-            pos_hint:{'center_x':0.5}
-            on_release:
-                root.parent.ids['DepressionPage'].ids['android_tabs'].switch_tab('1')
-                root.arrow_right()
+            size_hint_y:0.25
+            on_release: root.arrow_right()
 
-        BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y:0.3
-            Button:
-                # size_hint_x:1
-                text:'                     <                       '
-                on_release:root.arrow_left()
-            Button:
-                size_hint_x:1
-                text:'                     >                       '
-                on_release:
-                    root.parent.ids['DepressionPage'].ids['android_tabs'].switch_tab('1')
-                    root.arrow_right()
+        NavButtons
 
 <DepressionPage>:
+
+
     BoxLayout:
         orientation: 'vertical'
-        MDTopAppBar:
-            title: depression_toolbar_title
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
-            elevation:8
+        MyActionBar:
+            title:depression_toolbar_title
 
-        MDBoxLayout:
-            size_hint_y:0.7
-
-            MDTabs:
-                id: android_tabs
-                tab_pos:'left_top'
-                on_tab_switch: root.on_tab_switch(*args)
-
-                Tab:
-                    icon:'blank'
-                    text:'1'
-                    MDBoxLayout:
-                        orientation:'vertical'
-
-                        MDLabel:
-                            text: depression_Q1
-                            halign: 'center'
-                            size_hint_x:0.9
-
-                Tab:
-                    icon:'blank'
-                    text:'2'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: depression_Q2
-                            halign: 'center'
-                            size_hint_x:0.9
-
-        # MDGridLayout:
-        #     cols:4
-        MDBoxLayout:
-            orientation:'vertical'
-            Button:
-            # MDRectangleFlatButton:
-                # id:button7
-                icon:'numeric-3'
-                text:'Not at all'
-                halign:'left'
-                size_hint_x:0.8
-                font_style:'Button'
-                theme_text_color: "Custom"
-                color_icon_root_button: app.theme_cls.accent_color
+        BoxLayout:
+            orientation: 'vertical'
+            Label:
+                id:label1
+                text_size: root.width*self.size_hint_x, None
+                size: self.texture_size
+                color: TXT_COLOR
+                text:depression_Q_main
+                halign:'center'
                 pos_hint:{'center_x':0.5}
+                size_hint_y:0.5
 
-                on_release:
-                    root.button_press(3)
-            MDLabel:
-                text:''
-                size_hint_y:0.05
-            Button:
-                id:button6
-                icon:'numeric-2'
-                text:'Several days'
-                halign:'left'
+            # BoxLayout:
+            Label:
                 size_hint_x:0.8
-                font_style:'Button'
-                # size_hint_y:0.8
-                pos_hint:{'center_x':0.5}
-                on_release: root.button_press(2)
-                custom_color: 0, 1, 0, 1
-            MDLabel:
-                text:''
-                size_hint_y:0.05
-            Button:
-                id:button5
-                icon:'numeric-1'
-                text:'more than half the days'
-                halign:'left'
-                size_hint_x:0.8
-                font_style:'Button'
-                # size_hint_y:0.8
-                pos_hint:{'center_x':0.5}
-                on_release: root.button_press(1)
-            MDLabel:
-                text:''
-                size_hint_y:0.05
-            Button:
-                id:button4
-                icon:'numeric-0'
-                text:'nearly everyday'
-                halign:'left'
-                size_hint_x:0.8
-                font_style:'Button'
-                pos_hint:{'center_x':0.5}
-                on_release: root.button_press(0)
-            MDLabel:
-                text:''
-                size_hint_y:0.15
+                # size_hint_y:0.6
+                id:q_label
+                text_size: root.width*self.size_hint_x, None
+                color: TXT_COLOR
+                size: self.texture_size
+                text: ""
+                halign:'center'
+                pos_hint:{'center_x':0.5,'center_y':0.3}
+                size_hint_y:0.5
 
 
         BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y:0.3
-            Button:
-                text:'                     <                       '
-                size_hint_x:1
-                on_release:root.arrow_left()
-            Button:
-                text:'                     >                       '
-                size_hint_x:1
-                on_release:root.arrow_right()
+            orientation:'vertical'
+            size_hint_y:0.7
+            MyButton2:
+                text:'Not at all'
+                on_release: root.button_press(3)
 
-    FloatLayout:
-        orientation: 'vertical'
-        MDLabel:
-            pos:(50,950)
-            text: depression_Q0
-            md_bg_color:0,0,1,0.05
-            size_hint_y:0.15
-            size_hint_x:0.9
-            text_color:1,1,1,1
+            Widget:
+                size_hint_y:0.05
 
+            MyButton2:
+                text:'Several days'
+                on_release: root.button_press(2)
+            Widget:
+                size_hint_y:0.05
+
+            MyButton2:
+                text:'more than half the days'
+                on_release: root.button_press(1)
+            Widget:
+                size_hint_y:0.05
+
+            MyButton2:
+                text:'nearly everyday'
+                on_release: root.button_press(0)
+            Widget:
+                size_hint_y:0.05
+
+
+        NavButtons
+
+# -------------
 <DepressionScorePage>:
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        MDTopAppBar:
 
-            title: depression_toolbar_title
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-            elevation:8
-
-        MDLabel:
-            text: 'Your score is:'
-            halign: 'center'
-
-        MDLabel:
-            id:score_label
-            text: ''
-            halign: 'center'
-
-        Button:
-            id:restart_button
-            text:'Try Again'
-            font_style:'Button'
-            size_hint_x:0.7
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.reset_quiz()
-        Widget:
-            size_hint_y:0.05
-        Button:
-            id:next_section
-            text:'Back'
-            font_style:'Button'
-            size_hint_x:0.7
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.chevron_left()
-        Widget:
-            size_hint_y:0.05
-        Button:
-            id:next_section
-            text:'Next'
-            font_style:'Button'
-            size_hint_x:0.7
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.arrow_right()
-
-
-        MDLabel:
-            size_hint_y:0.7
-
+        MyActionBar:
+            title:physical_toolbar_title
 
         BoxLayout:
-            orientation: 'horizontal'
-            Button:
-                text:'                     <                       '
-                size_hint_x:1
-                on_release:root.arrow_left()
-            Button:
-                text:'                     >                       '
-                size_hint_x:1
+            orientation:'vertical'
+            Label:
+                text: 'Your score is:'
+                color: TXT_COLOR
+                halign: 'center'
+                font_size:'16sp'
+
+            Label:
+                id:score_label
+                text: ''
+                color: TXT_COLOR
+                halign: 'center'
+                font_size:'34sp'
+
+            MyButton2:
+                text:'Try Again'
+            Widget:
+                size_hint_y:0.05
+            MyButton2:
+                text:'Back'
+                on_release:root.chevron_left()
+            Widget:
+                size_hint_y:0.05
+            MyButton2:
+                text:'Next'
                 on_release:root.arrow_right()
+
+            Widget:
+                size_hint_y:0.2
+
+        NavButtons:
