--- a/layout_files/HyperTension.kv
+++ b/layout_files/HyperTension.kv
@@ -4,73 +4,53 @@
     BoxLayout:
         orientation: 'vertical'
 
-        MDTopAppBar:
-            title: hypertension_toolbar_title
-            halign: 'left'
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-            elevation:8
+        MyActionBar:
+            title:hypertension_toolbar_title
 
-        MDLabel:
+        Label:
             text:''
             size_hint_y:0.3
-        MDLabel:
+        Label:
             text: 'High blood pressure, especially in midlife, is associated with at least an 18% increase in the risk for Alzheimer\'s'
             font_size:'14sp'
             halign: 'left'
             size_hint_x:0.8
+            color: TXT_COLOR
             pos_hint:{'center_x':0.5}
 
-        MDLabel:
+        Label:
             # font_size:'2xw0sp'
             text: 'Answer the following questions about hypertension'
             # text_color:DARK_BLUE
             theme_text_color:"Hint"
             halign: 'left'
             size_hint_x:0.8
+            color: TXT_COLOR
             # size_hint_x:0.5
             pos_hint:{'center_x':0.5}
 
-        Button:
+        MyButton2:
             text:"Begin"
-            font_style:'Button'
-            # size_hint_x:0.7
-            pos_hint:{'center_x':0.5}
             on_release: root.arrow_right()
 
 
-        BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y:0.3
-            Button:
-                # size_hint_x:1
-                text:'                     <                       '
-                on_release:root.arrow_left()
-            Button:
-                size_hint_x:1
-                text:'                     >                       '
-                on_release: root.arrow_right()
+        NavButtons
 
 <HyperTensionPage>:
-    MDBoxLayout:
+    BoxLayout:
+        orientation: 'vertical'
+        MyActionBar:
+            title:hypertension_toolbar_title
 
-        orientation:'vertical'
-        MDTopAppBar:
-            title: hypertension_toolbar_title
-            # size_hint_y:0.1
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: app.callback_2()]]
-            elevation:8
 
-        MDLabel:
+        Label:
             text:'Have you ever been told by a doctor or other health professional that you had hypertension, also called high blood pressure?'
             pos_hint:{'center_x': 0.5, 'center_y': 0.5}
             size_hint_x:0.9
             size_hint_y:0.6
 
 
-        MDBoxLayout:
+        BoxLayout:
             orientation:'horizontal'
 
             Widget:
@@ -90,77 +70,46 @@
                 size_hint_x:0.2
 
 
-        BoxLayout:
-            orientation: 'horizontal'
-            Button:
-                text:'                     <                       '
-                size_hint_x:1
-                on_release:root.arrow_left()
-            Button:
-                text:'                     >                       '
-                size_hint_x:1
-                on_release:root.arrow_right()
+        NavButtons
 
 
 <HyperTensionScorePage>:
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        MDTopAppBar:
 
-            title: hypertension_toolbar_title
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-            elevation:8
-
-        MDLabel:
-            text: 'Your score is:'
-            halign: 'center'
-
-        MDLabel:
-            id:score_label
-            text: ''
-            halign: 'center'
-
-        Button:
-            id:restart_button
-            text:'Try Again'
-            font_style:'Button'
-            size_hint_x:0.7
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.reset_quiz()
-        Widget:
-            size_hint_y:0.05
-        Button:
-            id:next_section
-            text:'Back'
-            font_style:'Button'
-            size_hint_x:0.7
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.chevron_left()
-        Widget:
-            size_hint_y:0.05
-        Button:
-            id:next_section
-            text:'Next'
-            font_style:'Button'
-            size_hint_x:0.7
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.arrow_right()
-
-
-        MDLabel:
-            size_hint_y:0.7
-
+        MyActionBar:
+            title:physical_toolbar_title
 
         BoxLayout:
-            orientation: 'horizontal'
-            Button:
-                text:'                     <                       '
-                size_hint_x:1
-                on_release:root.arrow_left()
-            Button:
-                text:'                     >                       '
-                size_hint_x:1
+            orientation:'vertical'
+            Label:
+                text: 'Your score is:'
+                color: TXT_COLOR
+                halign: 'center'
+                font_size:'16sp'
+
+            Label:
+                id:score_label
+                text: ''
+                color: TXT_COLOR
+                halign: 'center'
+                font_size:'34sp'
+
+            MyButton2:
+                text:'Try Again'
+            Widget:
+                size_hint_y:0.05
+            MyButton2:
+                text:'Back'
+                on_release:root.chevron_left()
+            Widget:
+                size_hint_y:0.05
+            MyButton2:
+                text:'Next'
                 on_release:root.arrow_right()
+
+            Widget:
+                size_hint_y:0.2
+
+        NavButtons:
