--- a/layout_files/Location.kv
+++ b/layout_files/Location.kv
@@ -1,89 +1,116 @@
+#:set L_toolbar_title "Location"
+
 <LocationPage>:
-    BoxLayout:
+	BoxLayout:
 
-        orientation:'vertical'
-        MDTopAppBar:
-            title: 'Location'
-            # size_hint_y:0.1
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: app.callback_2()]]
-            elevation:8
+		orientation:'vertical'
 
-        MDLabel:
-            text:'Please select the category that you think best describes the community where you live:'
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            size_hint_x:0.9
-            size_hint_y:0.6
+		MyActionBar:
+			title:L_toolbar_title
 
-        Widget:
-            size_hint_y:0.2
-        BoxLayout:
-            orientation:'horizontal'
-            MDList:
-                id:listt
+		Label:
+			text:'Please select the category that you think best describes the community where you live:'
+			pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+			color: TXT_COLOR
+			size_hint_x:0.9
+			size_hint_y:0.6
 
-                TwoLineIconListItem:
-                    text:'Urban'
-                    # font_style:'H6'
-                    secondary_text:'≥50,000 residents'
-                    secondary_font_style:'Caption'
-                    halign:'left'
-                    on_release: root.toggle(self)
+		Widget:
+			size_hint_y:0.2
+		BoxLayout:
+			orientation:'horizontal'
+			size_hint_x:0.7
+			pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+			ScrollView:
+				# id:listt
+				BoxLayout:
+					orientation: 'vertical'
+					MyButton2:
+						id:B1
+						name:"B1"
+						selected:True
+						text:"Urban[size=10sp][color=#fcba03]\n>49,999 residents[/color][/size]"
+						# background_normal: ''
+					    # background_color: if (selected==True): 1,1,0,1 else: BTN_COLOR
 
-                    IconLeftWidget:
-                        name:'left_icon_urban'
-                        icon:'checkbox-blank-circle-outline'
+						on_release: root.toggle(self)
 
-                TwoLineIconListItem:
-                    text:'Large Rural'
-                    # font_style:'H6'
-                    secondary_text:'10,000 – 49,999 residents'
-                    secondary_font_style:'Caption'
-                    halign:'left'
-                    on_release: root.toggle(self)
+					MyButton2:
+						id:B2
+						name:"B2"
+						selected:False
+						text:'Large Rural\n[size=10sp][color=#fcba03]10,000 – 49,999 residents[/color][/size]'
+						# secondary_text:''
+						# secondary_font_style:'Caption'
+						# halign:'cent'
+						# markup:True
+						on_release: root.toggle(self)
 
-                    IconLeftWidget:
-                        name:'left_icon_large_rural'
-                        id:'left_icon_large_rural'
+					MyButton2:
+						id:B3
+						name:"B3"
+						selected:False
+						text:"Small Rural\n[size=10sp][color=#fcba03]2,500 – 9,999 residents[/color][/size]"
+						# secondary_text:'2,500 – 9,999 residents'
+						# secondary_font_style:'Caption'
+						# halign:'left'
+						on_release: root.toggle(self)
 
-                        icon:'checkbox-blank-circle-outline'
-                TwoLineIconListItem:
-                    text:'Small Rural'
-                    # font_style:'H6'
-                    secondary_text:'2,500 – 9,999 residents'
-                    secondary_font_style:'Caption'
-                    halign:'left'
-                    on_release: root.toggle(self)
+					MyButton2:
+						id:B4
+						name:"B4"
+						selected:False
+						text:"Isolated\n[size=10sp][color=#fcba03]<2,500 residents[/color][/size]"
+						# secondary_text:'<2,500 residents'
+						# secondary_font_style:'Caption'
+						# halign:'left'
+						on_release: root.toggle(self)
 
-                    IconLeftWidget:
-                        name:'left_icon_small_rural'
-                        icon:'checkbox-blank-circle-outline'
-                TwoLineIconListItem:
-                    text:'Isolated'
-                    # font_style:'H6'
-                    secondary_text:'<2,500 residents'
-                    secondary_font_style:'Caption'
-                    halign:'left'
-                    on_release: root.toggle(self)
-
-                    IconLeftWidget:
-                        name:'left_icon_isolated'
-                        icon:'checkbox-blank-circle-outline'
+					Switch:
 
 
-        BoxLayout:
-            orientation: 'horizontal'
-            Button:
-                text:'                     <                       '
-                size_hint_x:1
-                size_hint_y:0.15
-                on_release:
-                    root.manager.current='SociodemographicPage'
-                    root.manager.transition.direction="right"
-            Button:
-                text:'                     >                       '
-                size_hint_x:1
-                size_hint_y:0.15
-                on_release:
-                    root.manager.current='AirPollutionLandingPage'
-                    root.manager.transition.direction="left"
+		NavButtons
+
+
+# ----
+<LocationScorePage>:
+	score_label:score_label
+	BoxLayout:
+		orientation: 'vertical'
+
+		MyActionBar:
+			title:L_toolbar_title
+
+		BoxLayout:
+			orientation:'vertical'
+			Label:
+				text: 'Your score is:'
+				color: TXT_COLOR
+				halign: 'center'
+				font_size:'16sp'
+
+			Label:
+				id:score_label
+				text: ''
+				color: TXT_COLOR
+				halign: 'center'
+				font_size:'34sp'
+
+			MyButton2:
+				text:'Try Again'
+			Widget:
+				size_hint_y:0.05
+			MyButton2:
+				text:'Back'
+				on_release:root.chevron_left()
+			Widget:
+				size_hint_y:0.05
+			MyButton2:
+				text:'Next'
+				on_release:root.arrow_right()
+
+			Widget:
+				size_hint_y:0.2
+
+		NavButtons:
+
