--- a/layout_files/PhysicalActivity.kv
+++ b/layout_files/PhysicalActivity.kv
@@ -6,171 +6,131 @@
 
     BoxLayout:
         orientation: 'vertical'
+        MyActionBar:
+            title:physical_toolbar_title
 
-        MDTopAppBar:
-            title: physical_toolbar_title
-            halign: 'left'
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-            elevation:8
-
-        MDLabel:
-            text:''
-            size_hint_y:0.3
-        MDLabel:
+        WrapLabel:
             text: physical_landing_blurb
-            font_size:'14sp'
-            halign: 'left'
-            size_hint_x:0.8
-            pos_hint:{'center_x':0.5}
+            padding: dp(0), dp(30)
 
-        MDLabel:
+        Label:
             # font_size:'2xw0sp'
             text: physical_landing_subtitle
+            color: TXT_COLOR
             # text_color:DARK_BLUE
-            theme_text_color:"Hint"
+            # theme_text_color:"Hint"
             halign: 'left'
             size_hint_x:0.8
             # size_hint_x:0.5
             pos_hint:{'center_x':0.5}
 
-        Button:
+        MyButton2:
             text:"Begin"
-            font_style:'Button'
-            # size_hint_x:0.7
-            pos_hint:{'center_x':0.5}
-            on_release:
-                root.parent.ids['PhysicalActivityPage'].ids['android_tabs'].switch_tab('1')
-                root.arrow_right()
+            on_release:root.arrow_right()
 
-        BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y:0.3
-            Button:
-                # size_hint_x:1
-                text:'                     <                       '
-                on_release:root.arrow_left()
-            Button:
-                size_hint_x:1
-                text:'                     >                       '
-                on_release:
-                    root.parent.ids['PhysicalActivityPage'].ids['android_tabs'].switch_tab('1')
-                    root.arrow_right()
+        NavButtons
 
 <PhysicalActivityPage>:
     BoxLayout:
         orientation: 'vertical'
-        MDTopAppBar:
-            title: physical_toolbar_title
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
-            elevation:8
-        # MDLabel:
+        
+        MyActionBar:
+            title:physical_toolbar_title
+        # Label:
         #     text:''
 
-        MDBoxLayout:
-            size_hint_y:0.7
+        # BoxLayout:
+        #     size_hint_y:0.7
 
-            MDTabs:
-                id: android_tabs
-                tab_pos:'left_top'
-                on_tab_switch: root.on_tab_switch(*args)
+            # # MDTabs:
+            #     id: android_tabs
+            #     tab_pos:'left_top'
+            #     on_tab_switch: root.on_tab_switch(*args)
 
-                Tab:
-                    # tab_width:5
-                    icon:'blank'
-                    text:'1'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text:'On a typical week, how much time do you spend in total on moderate and vigorous physical activities where your heartbeat increases and you breathe faster? \n(e.g., brisk walking, cycling as a means of transport or as exercise, heavy gardening, running or recreational sports) \nOnly include activities that lasted at least 10 minutes at a time.'
-                            size_hint_x:0.9
-                            size_hint_y:1
-                            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-                            halign:'left'
+            #     Tab:
+            #         # tab_width:5
+            #         icon:'blank'
+            #         text:'1'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text:'On a typical week, how much time do you spend in total on moderate and vigorous physical activities where your heartbeat increases and you breathe faster? \n(e.g., brisk walking, cycling as a means of transport or as exercise, heavy gardening, running or recreational sports) \nOnly include activities that lasted at least 10 minutes at a time.'
+            #                 size_hint_x:0.9
+            #                 size_hint_y:1
+            #                 pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            #                 halign:'left'
 
-                        MDTextField:
-                            id:mins_per_week1
-                            name:'mins_per_week1'
-                            done:False
-                            size_hint_x:0.3
-                            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-                            text:''
-                            helper_text: "minutes/week"
-                            halign:'left'
-                            hint_text: "minutes/week"
-                            helper_text_mode: "on_focus"
-                            icon_right:'info'
-                            multiline:False
-                            on_text_validate: root.validate_text(self)
-                        # MDLabel:
-                        #     text:''
+            #             MDTextField:
+            #                 id:mins_per_week1
+            #                 name:'mins_per_week1'
+            #                 done:False
+            #                 size_hint_x:0.3
+            #                 pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            #                 text:''
+            #                 helper_text: "minutes/week"
+            #                 halign:'left'
+            #                 hint_text: "minutes/week"
+            #                 helper_text_mode: "on_focus"
+            #                 icon_right:'info'
+            #                 multiline:False
+            #                 on_text_validate: root.validate_text(self)
+            #             # Label:
+            #             #     text:''
 
-                        MDGridLayout:
-                            cols:3
-                            rows:4
-                            # adaptive_height: True
-                            # adaptive_width: True
-                            # adaptive_size: True
-                            on_parent:
-                                for i in [1,2,3,4,5,6,7,8,9,'/',0,'del']: txt = "{0}".format(i); self.add_widget(button.Button(text = txt,on_release=root.on_numpad_press))
+            #             MDGridLayout:
+            #                 cols:3
+            #                 rows:4
+            #                 # adaptive_height: True
+            #                 # adaptive_width: True
+            #                 # adaptive_size: True
+            #                 on_parent:
+            #                     for i in [1,2,3,4,5,6,7,8,9,'/',0,'del']: txt = "{0}".format(i); self.add_widget(button.Button(text = txt,on_release=root.on_numpad_press))
 
-                Tab:
-                    icon:'blank'
-                    text:'2'
-                    MDBoxLayout:
-                        orientation:'vertical'
-                        MDLabel:
-                            text: 'How much of the time that you spend on physical activities in a typical week, which you indicated above, do you spend in total on vigorous physical activities? This includes activities that get your heart racing, make you sweat and leave you so short of breath that speaking becomes difficult \n(e.g., swimming, running, cycling at high speeds, cardio training, weight-lifting or team sports such as football). \nOnly include activities that lasted at least 10 minutes at a time. '
-                            halign: 'left'
-                            size_hint_x:0.9
-                            size_hint_y:1.3
-                            pos_hint:{'center_x':0.5,'center_y':0.5}
-
-
-                        MDTextField:
-                            id:mins_per_week2
-                            name:'mins_per_week2'
-                            done:False
-                            size_hint_x:0.3
-                            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-                            text:''
-                            helper_text: "minutes/week"
-                            halign:'left'
-                            hint_text: "minutes/week"
-                            helper_text_mode: "on_focus"
-                            icon_right:'info'
-                            multiline:False
-                            on_text_validate: root.validate_text(self)
-                        # MDLabel:
-                        #     text:''
-
-                        MDGridLayout:
-                            cols:3
-                            rows:4
-                            # adaptive_height: True
-                            # adaptive_width: True
-                            # adaptive_size: True
-                            on_parent:
-                                for i in [1,2,3,4,5,6,7,8,9,'/',0,'del']: txt = "{0}".format(i); self.add_widget(button.Button(text = txt,on_release=root.on_numpad_press))
+            #     Tab:
+            #         icon:'blank'
+            #         text:'2'
+            #         BoxLayout:
+            #             orientation:'vertical'
+            #             Label:
+            #                 text: 'How much of the time that you spend on physical activities in a typical week, which you indicated above, do you spend in total on vigorous physical activities? This includes activities that get your heart racing, make you sweat and leave you so short of breath that speaking becomes difficult \n(e.g., swimming, running, cycling at high speeds, cardio training, weight-lifting or team sports such as football). \nOnly include activities that lasted at least 10 minutes at a time. '
+            #                 halign: 'left'
+            #                 size_hint_x:0.9
+            #                 size_hint_y:1.3
+            #                 pos_hint:{'center_x':0.5,'center_y':0.5}
 
 
-        BoxLayout:
-            size_hint_y:0.2
-            orientation: 'horizontal'
-            Button:
-                size_hint_x:1
-                text:'                     <                       '
-                on_release: root.arrow_left()
-            Button:
-                size_hint_x:1
-                text:'                     >                       '
-                on_release: root.arrow_right()
+            #             MDTextField:
+            #                 id:mins_per_week2
+            #                 name:'mins_per_week2'
+            #                 done:False
+            #                 size_hint_x:0.3
+            #                 pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+            #                 text:''
+            #                 helper_text: "minutes/week"
+            #                 halign:'left'
+            #                 hint_text: "minutes/week"
+            #                 helper_text_mode: "on_focus"
+            #                 icon_right:'info'
+            #                 multiline:False
+            #                 on_text_validate: root.validate_text(self)
+            #             # Label:
+            #             #     text:''
+
+            #             MDGridLayout:
+            #                 cols:3
+            #                 rows:4
+            #                 # adaptive_height: True
+            #                 # adaptive_width: True
+            #                 # adaptive_size: True
+            #                 on_parent:
+            #                     for i in [1,2,3,4,5,6,7,8,9,'/',0,'del']: txt = "{0}".format(i); self.add_widget(button.Button(text = txt,on_release=root.on_numpad_press))
+
+
+        NavButtons
 
     # FloatLayout:
     #     orientation: 'vertical'
-    #     MDLabel:
+    #     Label:
     #         pos:(50,950)
     #         text: 'If the AQI is higher than 200 and if I have to stay outdoors for more than 1 hour consecutively:'
     #         # md_bg_color:0,0,1,0.05
@@ -182,61 +142,39 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        MDTopAppBar:
 
-            title: physical_toolbar_title
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-            elevation:8
-
-        MDLabel:
-            text: 'Your score is:'
-            halign: 'center'
-
-        MDLabel:
-            id:score_label
-            text: ''
-            halign: 'center'
-
-        Button:
-            id:restart_button
-            text:'Try Again'
-            font_style:'Button'
-            size_hint_x:0.7
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.reset_quiz()
-        Widget:
-            size_hint_y:0.05
-        Button:
-            id:next_section
-            text:'Back'
-            font_style:'Button'
-            size_hint_x:0.7
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.chevron_left()
-        Widget:
-            size_hint_y:0.05
-        Button:
-            id:next_section
-            text:'Next'
-            font_style:'Button'
-            size_hint_x:0.7
-            pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.arrow_right()
-
-
-        MDLabel:
-            size_hint_y:0.7
-
+        MyActionBar:
+            title:physical_toolbar_title
 
         BoxLayout:
-            orientation: 'horizontal'
-            Button:
-                text:'                     <                       '
-                size_hint_x:1
-                on_release:root.arrow_left()
-            Button:
-                text:'                     >                       '
-                size_hint_x:1
+            orientation:'vertical'
+            Label:
+                text: 'Your score is:'
+                color: TXT_COLOR
+                halign: 'center'
+                font_size:'16sp'
+
+            Label:
+                id:score_label
+                text: ''
+                color: TXT_COLOR
+                halign: 'center'
+                font_size:'34sp'
+
+            MyButton2:
+                text:'Try Again'
+            Widget:
+                size_hint_y:0.05
+            MyButton2:
+                text:'Back'
+                on_release:root.chevron_left()
+            Widget:
+                size_hint_y:0.05
+            MyButton2:
+                text:'Next'
                 on_release:root.arrow_right()
+
+            Widget:
+                size_hint_y:0.2
+
+        NavButtons:
