--- a/health_app.kv
+++ b/health_app.kv
@@ -57,6 +57,10 @@ WindowManager:
 		id:SociodemographicPage
 		name:'SociodemographicPage'
 
+	SociodemographicPage_Age
+		id:SociodemographicPage_Age
+		name:"SociodemographicPage_Age"
+
 	# ------------------------------------- #
 	LocationPage:
 		id:LocationPage
