added to sociodemographics

--- a/health_app.kv
+++ b/health_app.kv
@@ -61,6 +61,18 @@ WindowManager:
 		id:SociodemographicPage_Age
 		name:"SociodemographicPage_Age"
 
+	SociodemographicPage_Sex
+		id:SociodemographicPage_Sex
+		name:"SociodemographicPage_Sex"
+
+	SociodemographicPage_Military
+		id:SociodemographicPage_Military
+		name:"SociodemographicPage_Military"
+
+	SociodemographicPage_Military_2
+		id:SociodemographicPage_Military_2
+		name:"SociodemographicPage_Military_2"
+
 	# ------------------------------------- #
 	LocationPage:
 		id:LocationPage
